[tool.poetry]
name = "vimwiki-extensions"
version = "0.1.0"
description = "Python extensions for the Vimwiki plugin"
authors = ["Griffin Knipe <knipegp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pynvim = "^0.4.3"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pylint = "^2.12.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
